# render-engine

./: CMakeLists.txt  Readme.md
shader/: ambient_light_fs.glsl  ambient_light_vs.glsl  directional_light_fs.glsl  mesh_depth_vs.glsl  mesh_fs.glsl  mesh_vs.glsl  point_light_fs.glsl  point_light_vs.glsl
src/: camera.hpp  common.hpp  directional_light_node.hpp  extent2d.hpp  g_buffer.hpp  index_buffer.hpp  main.cpp  mesh.hpp  mesh_node.hpp  node.hpp  program.hpp  quad.hpp  scene.cpp  scene.hpp  shadow_depth_map.hpp  texture2d.hpp  vertex_array.hpp  vertex_buffer.hpp
